[tool.poetry]
name = "TA-tesla-data"
version = "0.1.0"
description = ""
authors = ["Will Searle <will@livehybrid.com>"]

[tool.poetry.dependencies]
python = "^3.7,<3.8"
splunk-add-on-ucc-framework = "^5.41.0"
requests = "^2.31.0"
htmldom = "^2.0"
grip = "^4.6.2"
splunk-appinspect = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
